2004-09-09  Tim Coleman <tim@timcoleman.com>
	* Base64FormattingOptions.cs: New enum
	* Convert.cs: Add new ToBase64String methods for Fx 2.0


2004-09-08  Marek Safar  <marek.safar@seznam.cz>

	* Console.cs,
	* GC.cs: Class is static for NET_2_0.

2004-09-07 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Activator.cs: Make sure not to call .GetType on a
	null argument. fixes 63852

2004-09-06 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Array.cs (Clear): make this an icall.

2004-09-05 Ben Maurer  <bmaurer@users.sourceforge.net>

	* MonoCustomAttribute.cs: Avoid the call to GetBase when possible.

2004-09-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Environment.cs: (ExpandEnvironmentVariables) don't nullify the case
	insensitive enironment variables hashtable once we create it.

2004-09-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AppDomain.cs: Changed 2 imperative security demands to declarative
	(unsupported) so it doesn't (for now) call the security runtime.

2004-09-02  Zoltan Varga  <vargaz@freemail.hu>

	* Delegate.cs: Free the delegate trampoline in the finalizer.

2004-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicationId.cs: Completed GetHashCode using information from MS
	(FDBK13339).

2004-08-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Boolean.cs: Added TryParse static method for NET_2_0 profile.

2004-08-19  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs : When hour format is "hh", MS.NET (maybe incorrectly)
	  allows 12, that should not be accepted (13 is rejected) and
	  interpreted as 0. This fixes bug 63376.

2004-08-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Version.cs: Fixed Clone so we can use it on versions with only
	major/minor or major/minor/build.

2004-08-17  Martin Baulig  <martin@ximian.com>

	* MonoType.cs (MonoType.getFullName): Added `bool full_name'
	argument specifying whether or not to include the type arguments.
	(MonoType.FullName): Don't include the type arguments.